--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-image: url("https://img.freepik.com/fotos-premium/dois-gatinhos-hd-8k-papel-de-parede-banco-de-imagem-fotografica_915071-61850.jpg");
 }
 
 .container {
